--- a/_posts/blog/2018-03-29-welcome.md
+++ b/_posts/blog/2018-03-29-welcome.md
@@ -1,29 +1,23 @@
 ---
 layout: post
-title: Welcome to my Website
+title: Welcome to my Blog
 directory: welcome
 featured-img: welcome-lg
 featured-img-banner: welcome-banner
 mathjax: true
 permalink: /blog/:title/
 type: blog
+summary: I'm excited to introduce my engineering blog where I'll be discussing anything and everything
+         relating to the field of software development. This blog is a means for me to to document my progress throughout my career, as well as 
+         showcasing some of the cool stuff I've learned along the way.
+
 ---
 
+## Hello World!
 
-## Getting started
+To say that technology has progressed in recent years is something short of an understatement.
+In today's day and age, it's truly a feat to keep up-to-date with this so called "perfect storm".
+I'm hoping this blog will help me organise my thoughts and force me to learn the intricacies I 
+may happen to avoid had I not written about the subject.
 
-[GitHub Pages](https://pages.github.com) can automatically generate and serve the website for you.
-Let's say you have a username/organisation `my-org` and project `my-proj`; if you locate Jekyll source under `blog` folder of master branch in your repo `github.com/my-org/my-proj`, the website will be served on `my-org.github.io/my-proj`.
-
-1. Just download or fork and clone the source from [github.com/janczizikow/sleek](https://github.com/janczizikow/sleek/).
-2. Make sure your local machine has ruby and node
-2. Edit site settings in  `_config.yml` file according to your project.
-3. Replace `favicons` and `_includes/logo.svg` with your own logo.
-
-**Note** that you might have to adjust some CSS depending on the width and height of your logo. You can find Header / Navigation related SCSS in `_sass/layout/nav.scss`.
-
-## Writing content
-
-### Posts
-
-Create a new Markdown file
+Thank you for visiting! I look forward to sharing my insight in a field we all feel so passionate about.
