CSS changes, styling

--- a/_posts/blog/2018-03-29-welcome.md
+++ b/_posts/blog/2018-03-29-welcome.md
@@ -16,8 +16,8 @@ summary: I'm excited to introduce my engineering blog where I'll be discussing a
 ## Hello World!
 
 To say that technology has progressed in recent years is something short of an understatement.
-In today's day and age, it's truly a feat to keep up-to-date with this so called "perfect storm".
-I'm hoping this blog will help me organise my thoughts and force me to learn the intricacies I 
+In today's day and age, it's truly a feat to keep up-to-date with this so called "perfect storm" of change.
+I'm hoping this blog will help me organise my thoughts with new technologies and force me to learn the intricacies I 
 may happen to avoid had I not written about the subject.
 
 Thank you for visiting! I look forward to sharing my insight in a field we all feel so passionate about.
