blog posts refactor and image inclusions

--- a/_posts/blog/2018-03-29-welcome.md
+++ b/_posts/blog/2018-03-29-welcome.md
@@ -2,8 +2,8 @@
 layout: post
 title: Welcome to my Blog
 directory: welcome
-featured-img: welcome-lg
-featured-img-banner: welcome-banner
+featured-img: lg
+featured-img-banner: banner
 mathjax: true
 permalink: /blog/:title/
 category: Misc
